Adjusting index.html

--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <head>
-	<link rel="stylesheet" type="text/css" href="./style.css"></p>
+	<link rel="stylesheet" type="text/css" href="./homepage.css"></p>
 </head>
-<header>
-	<img id="home" src="./home.png">
-	<div id="title">
-		<h1 id="name">MLPCCG Decklists</h1>
-		<h2 id="surname">PixlRush</h2>
-	</div>
-</header>
 <body>
-	<div id="decks">
-		<div id="imagebody">
-			<a href="./Stamp of Approval.html"><img id="deck" border-color="#642181" src="./card_images/EO/54.jpg"></a>
-			<p>Stamp of Approval</p>
+	<header>
+		<img id="home" src="./home.png" style="margin-right: 10px;">
+		<div id="title" style="display: inline-block;">
+			<h1 id="name">MLPCCG Decklists</h1>
+			<h2 id="surname">PixlRush</h2>
+		</div>
+	</header>
+	<div id="decks" style="display: inline-table;">
+		<div id="deck" id="purple">
+			<div id="imagebody">
+				<a href="./Stamp of Approval.html">
+					<img id="icon" border-color="#642181" src="./card_images/EO/54.jpg">
+				</a>
+				<p>Stamp of Approval</p>
+			</div>
 		</div>
 	</div>
 </body>
