Renaming style.css and adjusting Stamp of Approval.html

--- a/Stamp of Approval.html
+++ b/Stamp of Approval.html
@@ -1,5 +1,5 @@
 <head>
-	<link rel="stylesheet" type="text/css" href="./style.css"></p>
+	<link rel="stylesheet" type="text/css" href="./strat.css"></p>
 </head>
 <header>
 	<a href="./index.html"><img id="home" href="./index.html" src="./home.png"></a>
